tests/paczka1/small_fuzzy/86434905.err
Error in line 2: kZcPpX S576 12,4
Error in line 11: A5x S726 7,5
Error in line 4: NBM S726 90,0
